flux/clusters/management/apps/cattle-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system
spec:
  parentRefs:
    - name: rancher-gateway
      namespace: cattle-system
  hostnames:
    - rancher.kube.test.nickdann.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher-stable
          namespace: cattle-system
          port: 80
